HISTORY of the LA VIDA Finance
--------------------

0.2
-------------------------
- Added change-log file  History.txt ;
- Added abilities :
  - to manage postponed operations (save to the XML file, load from the XML file, delete from the local database);
  - to edit tables fields with synchronous updating the remote Google spreadsheet;
  - to add new products to the remote Google spreadsheet;
- Created UI components:
  - MenuBar with items: postponed, products, settings;
  - AddNewProductsDialog, ColumnsViewSettingsDialog;

0.1           27-08-2013
-------------------------
- Added the system for counting sold products by each seller;
- Added abilities :
  - to refresh data from/to the remote Google spreadsheet;
  - to sell, refund, search products;
  - to manage such data as users, settings of the Google Spreadsheet, tags of financial operations,  sellers with the local database;
- Created UI components:
  - LoginForm, MainForm, SellDialog, SoldProductsDialog, RefundDialog;
- Created an application using JPA, Hibernate, Spring, Swing, Google API, MySQL Server.


End of document